# GooeyWave

./: .gitignore  CMakeLists.txt  README.md
Resources/: Info.plist.in
Resources/Forms/: gooeymain.ui
Source/: gooeymain.cpp  gooeymain.h  main.cpp  waterview.cpp  waterview.h
